--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -718,6 +718,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="gsa-K0-7IE"/>
-        <segue reference="DYk-JR-jkb"/>
+        <segue reference="gN1-At-mix"/>
     </inferredMetricsTieBreakers>
 </document>
