--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -14,6 +14,7 @@
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="tintColor" red="0.13333334029999999" green="0.57647061349999995" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="KWQ-vs-00K" kind="relationship" relationship="viewControllers" id="yRP-Zc-TXk"/>
@@ -132,8 +133,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="littlebuddy_logo" translatesAutoresizingMaskIntoConstraints="NO" id="9uu-yV-PoT">
-                                <rect key="frame" x="36" y="93" width="248" height="108"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="XboxBuddyLogotype-01" translatesAutoresizingMaskIntoConstraints="NO" id="9uu-yV-PoT">
+                                <rect key="frame" x="32" y="40" width="248" height="197"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eJd-4E-4gS">
@@ -144,7 +145,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEa-tQ-Ccx">
                                 <rect key="frame" x="119" y="245" width="74" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.13333334028720856" green="0.66666668653488159" blue="0.29019609093666077" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.13333334028720856" green="0.57647061347961426" blue="0.29019609093666077" alpha="1" colorSpace="deviceRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -208,7 +209,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q3l-AP-bHr">
                                 <rect key="frame" x="123" y="249" width="74" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.13333334029999999" green="0.66666668650000005" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
+                                <color key="backgroundColor" red="0.13333334029999999" green="0.57647061349999995" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Log In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -225,7 +226,7 @@
                                 <items>
                                     <navigationItem id="vBd-8o-M40">
                                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="EJr-rp-sKE">
-                                            <color key="tintColor" red="0.13333334029999999" green="0.66666668650000005" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
+                                            <color key="tintColor" red="0.13333334029999999" green="0.57647061349999995" blue="0.29019609089999998" alpha="1" colorSpace="deviceRGB"/>
                                             <connections>
                                                 <segue destination="rHQ-dR-5oc" kind="modal" id="mfM-wZ-hRf"/>
                                             </connections>
@@ -690,7 +691,7 @@
         <image name="TempFriendsIcon.png" width="24" height="24"/>
         <image name="TempHomeIcon.png" width="24" height="24"/>
         <image name="TempUserIcon.png" width="24" height="24"/>
-        <image name="littlebuddy_logo" width="248" height="108"/>
+        <image name="XboxBuddyLogotype-01" width="320" height="300"/>
         <image name="settings-24-transparent-bg" width="24" height="24"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
