When app launched from push notification, show achievement detail.

--- a/XboxBuddy/Main.storyboard
+++ b/XboxBuddy/Main.storyboard
@@ -419,7 +419,7 @@
         <!--Achievement View Controller - Achievement-->
         <scene sceneID="kY8-ay-RSQ">
             <objects>
-                <viewController id="EsV-EW-HG1" customClass="AchievementViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AchievementViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="EsV-EW-HG1" customClass="AchievementViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="C5h-Wz-Nbs"/>
                         <viewControllerLayoutGuide type="bottom" id="lji-0Z-Pdi"/>
